--- a/MuInStoreAPI/appsettings.json
+++ b/MuInStoreAPI/appsettings.json
@@ -5,5 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-JUT4AI8\\SQLEXPRESS;Database=MuInStore;Encrypt=False;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+  "JWT": {
+    "Issuer": "http://localhost:5246",
+    "Audience": "http://localhost5246",
+    "SigningKey": "VeryImportantSiginingKeyOfMuInStore"
+  }
 }
