--- a/MuInStoreAPI/MuInStoreAPI.csproj
+++ b/MuInStoreAPI/MuInStoreAPI.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -25,9 +25,6 @@
 
   <ItemGroup>
     <Folder Include="Assets\" />
-    <Folder Include="Mappers\" />
-    <Folder Include="UnitOfWork\" />
-    <Folder Include="Repository\" />
   </ItemGroup>
 
   <ItemGroup>
