--- a/MuInStoreAPI/appsettings.json
+++ b/MuInStoreAPI/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-JUT4AI8\\SQLEXPRESS;Database=MuInStore;Encrypt=False;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=DESKTOP-JUT4AI8\\SQLEXPRESS;Database=MuInStore2;Encrypt=False;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "JWT": {
     "Issuer": "http://localhost:5246",
