- Adding DbContext - Adding Seed Data - Change Get Product  Api Endpoint

--- a/MuInStoreAPI/MuInStoreAPI.csproj
+++ b/MuInStoreAPI/MuInStoreAPI.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="13.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.10" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.10">
@@ -28,6 +29,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\MuIn.Application\MuIn.Application.csproj" />
     <ProjectReference Include="..\MuIn.Infrastructure\MuIn.Infrastructure.csproj" />
     <ProjectReference Include="..\MuInShared\MuInShared.csproj" />
   </ItemGroup>
