--- a/MuIn.Infrastructure/MuIn.Infrastructure.csproj
+++ b/MuIn.Infrastructure/MuIn.Infrastructure.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <Folder Include="EntityConfigurations\" />
     <Folder Include="Extensions\" />
+    <Folder Include="Migrations\" />
     <Folder Include="Repositories\" />
   </ItemGroup>
 
