--- a/MuInStoreAPI/MuInStoreAPI.csproj
+++ b/MuInStoreAPI/MuInStoreAPI.csproj
@@ -26,6 +26,7 @@
 
   <ItemGroup>
     <Folder Include="Assets\" />
+    <Folder Include="StaticFiles\" />
     <Folder Include="Request\" />
   </ItemGroup>
 
