Handle Sku Services and delete UOW, old Models and Old Repository

--- a/MuIn.Application/MuIn.Application.csproj
+++ b/MuIn.Application/MuIn.Application.csproj
@@ -16,4 +16,8 @@
     <ProjectReference Include="..\MuInShared\MuInShared.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="PaymentService\" />
+  </ItemGroup>
+
 </Project>
